# vision3

./: .gitattributes  .gitignore  README.md  Test_input.ipynb  convert_to_numpy.py  create_scene_point_cloud.py  get_intel_dataset.py  high_accuracy_preset.json
3d_processing/: calc_depth.py  calc_disparity.py  calc_rectification.py  pipeline_processing.py
baslercam/: .gitignore  basler_camera_controller.py  basler_driver.py  demo_close_basler_cameras.py  demo_get_basler_all_images.py  demo_get_basler_color_image.py  demo_get_basler_mono_images.py  demo_open_basler_cameras.py  get_basler_images.py  rviz_security_color.rviz  save_calib_dataset.py
baslercam/basler_client_functions/: call_empty_service_and_get_data.py  close_basler_cameras.py  get_basler_all_images.py  get_basler_color_image.py  get_basler_mono_images.py  open_basler_cameras.py
baslercam/controller_cpp/: CMakeLists.txt  README.md  package.xml
baslercam/controller_py/: basler_driver.py
baslercam/custom_interfaces/: CMakeLists.txt  package.xml
baslercam/scanning_items/: get_basler_images.py
calib/: basler_calibration.json  cal_mul.py  calibrate.py  calibrate_cam_to_plane.py  calibrate_cams_to_table.py  calibrate_intel_cams.py  charuco_calibration_cam0_to_cam3.json  charuco_calibration_cam1_to_cam3.json  charuco_calibration_cam2_to_cam3.json  charuco_calibration_cam4_to_cam3.json  charuco_calibration_cam5_to_cam3.json  local_calibration_cam0_to_cam3.json  local_calibration_cam1_to_cam3.json  local_calibration_cam2_to_cam3.json  local_calibration_cam4_to_cam3.json  local_calibration_cam5_to_cam3.json  point_cloud_registration.py
calib/dataset_example/: description.txt
dataset/: blenderproc_001.py  blenderproc_002.py  make_items_list.py
detect/: items_list.json
image_processing/: filter_ortho_images.py  utils.py
intelcam/: close_intel_camera.py  filter.py  get_intel_all_images.py  open_intel_camera.py
intelcam/config/: cam0_config.json  (+6 more)
ros2_basler_cpp_driver/: CMakeLists.txt  README.md  package.xml
ros2_basler_cpp_driver/config/: 4k_basler_rectification.json  basler.rviz  fhd_basler_rectification.json
ros2_basler_cpp_driver/include/basler_ros2_driver/: basler_configuration_handlers.hpp  basler_driver.hpp  basler_image_handlers.hpp
ros2_basler_cpp_driver/launch/: basler_ros2_driver.launch.py
ros2_basler_cpp_driver/scripts/: configutre_binning.py  grab_images.py
ros2_basler_cpp_driver/src/: basler_driver.cpp  basler_image_handlers.cpp
(+20 files in other folders)
