<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basler_ros2_driver</name>
  <version>0.0.1</version>
  <description>ros2 driver for basler usb3 dart cameras</description>
  <maintainer email="hasanfarag@aol.com">hasanfarag</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>helpers_commons</depend>
  <depend>custom_interfaces</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>